--- a/public/views/upload-modern.ejs
+++ b/public/views/upload-modern.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Upload Project - Projexia</title>
-    <link rel="icon" type="image/jpeg" href="/images/favicon.jpg" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     
     <!-- CSS Files -->
     <link rel="stylesheet" href="/css/projexia-design-system.css" />
